added status mission color and pipe fixs

--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="ru" dir="ltr">
+<html dir="ltr" lang="ru">
 <head>
   <meta charset="utf-8">
   <title>SpaceX Launcher</title>
