--- a/src/index.html
+++ b/src/index.html
@@ -17,9 +17,6 @@
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet"/>
 </head>
 <body>
-<app-root>
-  <mat-progress-bar mode="query">
-  </mat-progress-bar>
-</app-root>
+<app-root></app-root>
 </body>
 </html>
